# indie-game

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_mingw.sh  run.sh
include/: camera.hpp  collidable.hpp  constants.hpp  game.h  game.hpp  game_menu.h  game_menu.hpp  player.h  player.hpp  quest.hpp  tile.hpp
include/Animation/: animation.hpp  animation_component.hpp
include/Entities/: entity.hpp  npc.hpp  player.hpp  quest_npc.hpp
include/Interactive/: Interactivable.hpp  interactivable.hpp  interactiveObject.hpp  interactiveTile.hpp
include/Menu/: game_menu.hpp
include/UI/: button.hpp  hud.hpp  ui_element.hpp
include/World/: World.hpp  grid.hpp  lobby.hpp  machine_world.hpp  maze_world.hpp  tile.hpp  world.hpp
resources/worlds/: DogWorldMap.tsx  debug.tmx  dogWorld.tmx  dogWorldSecond.tmx  dog_stule.tmx  dog_world (2).tmx  dog_world.tmx  dog_world.tsx  dog_world1.tmx  dog_world10.tmx  dog_world3.tmx  dog_world4.tmx  dog_world6.tmx  dwaflkesjfklsfa.tsx  lobby.tmx
src/: Camera.cpp  collidable.cpp  game.cpp  game_menu.cpp  main.cpp
src/Animation/: animation.cpp  animation_component.cpp
src/Entity/: entity.cpp  npc.cpp  player.cpp
src/Interactive/: Interactivable.cpp  interactivable.cpp  interactiveObject.cpp  interactiveTile.cpp  interactive_object.cpp
src/UI/: button.cpp  ui_element.cpp
src/World/: World.cpp  grid.cpp  tile.cpp  world.cpp
